--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* General Styles */
+
 main {
   margin-top: 60px;
 }
@@ -53,6 +55,8 @@ main p {
   flex: 2;
   margin: 10px;
 }
+
+/* Groups & Items  (Desktop) */
 
 @media all and (min-width: 800px) {
   section {
